--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Monir Khan",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "socket.io": "^4.4.1"
   }
